--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -136,4 +136,10 @@
   <data name="wallpaper2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wallpaper2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mothership" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mothership.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Battlecruiser2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Battlecruiser2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
